# eg-NES

./: .gitignore  CMakeLists.txt  README.md
6502/: CMakeLists.txt  eg6502_run_test.cpp
6502/include/: cycle.h  m6502.h  sr.h
6502_Test/: 6502_Test.cpp  6502_Test.vcxproj  6502_Test.vcxproj.filters
egNES1/: 6502.cpp  6502.h  egNES1.cpp  egNES1.sln  egNES1.vcxproj  egNES1.vcxproj.filters
m6502/: CMakeLists.txt  m6502_run_test.cpp
m6502/include/: extra.h  ins.h  m6502.h  m6502_generic.h  mem.h  reg.h  types.h
m6502/src/: cycle.cpp  m6502.cpp  m6502_generic.cpp  m6502_ins_adc.cpp  m6502_ins_dec.cpp  m6502_ins_dex.cpp  m6502_ins_dey.cpp  m6502_ins_inc.cpp  m6502_ins_inx.cpp  m6502_ins_iny.cpp  m6502_ins_jmp.cpp  m6502_ins_ld.cpp  m6502_ins_lda.cpp  m6502_ins_ldx.cpp  m6502_ins_ldy.cpp  m6502_ins_nop.cpp  mem.cpp  reg.cpp
m6502/test/include/: m6502_generic.h  m6502_ins_common.h  m6502_ins_lda.h  m6502_ins_ldx.h  m6502_ins_ldy.h  m6502_ins_nop.h  m6502_tester.h  m6502_tins_adc.h  m6502_tins_common.h  m6502_tins_dec.h  m6502_tins_dex.h  m6502_tins_dey.h  m6502_tins_inc.h  m6502_tins_inx.h  m6502_tins_iny.h  m6502_tins_jmp.h  m6502_tins_lda.h  m6502_tins_ldx.h  m6502_tins_ldy.h  m6502_tins_nop.h
m6502/test/src/: m6502_generic.cpp  m6502_ins_lda.cpp  m6502_ins_ldx.cpp  m6502_ins_ldy.cpp  m6502_ins_nop.cpp  m6502_tester.cpp  m6502_tins_adc.cpp  m6502_tins_dec.cpp  m6502_tins_dex.cpp  m6502_tins_dey.cpp  m6502_tins_inc.cpp  m6502_tins_inx.cpp  m6502_tins_iny.cpp  m6502_tins_jmp.cpp  m6502_tins_lda.cpp  m6502_tins_ldx.cpp  m6502_tins_ldy.cpp  m6502_tins_nop.cpp
(+27 files in other folders)
